--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "module": "dist/use-axios-request.es.js",
   "license": "MIT",
   "devDependencies": {
+    "@babel/preset-typescript": "^7.3.3",
     "@types/jest": "^24.0.11",
     "@types/node": "^11.13.4",
     "@types/react": "^16.8.13",
@@ -17,6 +18,7 @@
     "prettier": "^1.17.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-hooks-testing-library": "^0.4.1",
     "react-scripts": "2.1.8",
     "rollup": "^1.10.0",
     "rollup-plugin-commonjs": "^9.3.4",
@@ -27,7 +29,8 @@
   "scripts": {
     "build": "rollup -c",
     "start": "react-scripts start",
-    "prepublishOnly": "yarn run build"
+    "prepublishOnly": "yarn run build",
+    "test": "react-scripts test"
   },
   "peerDependencies": {
     "axios": "^0.18.0",
